swagger parameters
